<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>net.javaci.bank</groupId>
	<artifactId>javaci-bank</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<packaging>pom</packaging>

	<name>Javaci Bank</name>
	<description>Javaci Banking System - Parent Project</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>1.8</java.version>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
		
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		
		<!-- ******* TEST DEPENDENCIES ****************************** -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
	        <groupId>org.junit.jupiter</groupId>
	        <artifactId>junit-jupiter-engine</artifactId>
	        <scope>test</scope>
	    </dependency>
	    
	    <dependency>
	        <groupId>org.junit.platform</groupId>
	        <artifactId>junit-platform-runner</artifactId>
	        <scope>test</scope>
	    </dependency>

	</dependencies>
	
	<build>
		<plugins>

			<!-- 
			https://devcenter.heroku.com/articles/deploying-java-applications-with-the-heroku-maven-plugin 
			https://stackoverflow.com/questions/39197334/automated-heroku-deploy-from-subfolder
			-->
			<plugin>
				<groupId>com.heroku.sdk</groupId>
				<artifactId>heroku-maven-plugin</artifactId>
				<version>2.0.16</version>
				<configuration>
					<appName>javaci-bank</appName>
					<jdkVersion>1.8</jdkVersion>

					<includeTarget>false</includeTarget>
					<includes>
						<include>javaci-bank-api/target/javaci-bank-api-0.0.1-SNAPSHOT.jar</include>
					</includes>
					
					<processTypes>
						<web>java $JAVA_OPTS -jar javaci-bank-api-0.0.1-SNAPSHOT.jar -Dserver.port=$PORT $JAR_OPTS</web>
					</processTypes>
					
					<!-- 
					<configVars>
					  <PROJECT_PATH>javaci-bank-api</PROJECT_PATH>
					  <JAVA_OPTS>-Xss512k -XX:+UseCompressedOops</JAVA_OPTS>
					</configVars>
					
					<buildpacks>
						<buildpack>https://github.com/timanovsky/subdir-heroku-buildpack.git</buildpack>
						<buildpack>heroku/java</buildpack>
					</buildpacks>
					 -->
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>javaci-bank-db</module>
		<module>javaci-bank-api</module>
		<module>javaci-bank-util</module>
		<module>javaci-bank-backoffice</module>
	</modules>
	
</project>